# Haskell-Notes

./: Practice1_1.hs  README.md  lec1_2_lamda.hs  lec1_3_types.hs  lec1_3b_parametric.hs  lec1_4.hs  lec1_4b_data_type.hs  lec1_5.hs  lec1_6_equational_reasoning.hs  lec2_10.hs  lec2_10_Zipping_Lists.hs  lec2_11.hs  lec2_11_table.hs  lec2_12.hs  lec2_12_Maybe.hs  lec2_13.hs  lec2_14.hs  lec2_14_data_type_datatype.hs  lec2_14a_datatypes.hs  lec2_14b.hs  lec2_14c_naming.hs  lec2_1_pattern_matching.hs  lec2_3_test.hs  lec2_4.hs  lec2_5.hs  lec2_6_mapping_filter.hs  lec2_7.hs  lec2_8.hs  lec2_8b.hs  lec2_9.hs  lec2_9_Pairs.hs  lec3_1.hs  lec3_2.hs  lec3_3.hs  lec3_3_strict.hs  lec3_4.hs  lec3_4_foldr.hs  lec3_5.hs  lec3_5_foldl.hs  lec3_5b_foldr_foldl.hs  (+62 more)
aa/: A.hs  Q.cabal
aa/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
package-demo/: CHANGELOG.md  hie.yaml  package-demo.cabal
package-demo/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
package-demo/src/: MyLib.hs
